--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "react-dev": "webpack -d --watch",
     "react-p": "webpack -p",
     "start": "node server/index.js",
     "server": "nodemon server/index.js"
@@ -50,6 +49,10 @@
     "webpack-cli": "^3.3.1"
   },
   "devDependencies": {
-    "file-loader": "^3.0.1"
+    "file-loader": "^3.0.1",
+    "image-webp-loader": "^1.2.1",
+    "image-webpack-loader": "^4.6.0",
+    "imagemin-webp-webpack-plugin": "^3.1.0",
+    "webp-loader": "^0.4.0"
   }
 }
