--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "react-dev": "webpack -d --watch",
     "react-p": "webpack -p",
     "start": "node server/index.js",
     "server": "nodemon server/index.js"
