--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
